<resources>
    <string name="app_name">BancoUTN</string>
    <string name="para_constituir_tu_plazo_fijo_necesitamos_que_nos_proveas_algunos_datos">Para constituir tu plazo fijo necesitamos que nos proveas algunos datos.</string>
    <string name="name">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="moneda">Moneda</string>
    <string name="simular">Simular</string>
    <string name="hola">Hola</string>
    <string name="tasa_efectiva_anual">Tasa Efectiva Anual</string>
    <string name="capital_a_invertir">Capital a Invertir($)</string>
    <string name="_0_dias">0 dias</string>
    <string name="tasa_nominal_anual">Tasa Nominal Anual</string>
    <string name="simulador_de_plazo_fijo">Simulador de Plazo Fijo</string>
    <string name="capital">Capital:</string>
    <string name="intereses_ganados">Intereses ganados:</string>
    <string name="monto_total">Monto total:</string>
    <string name="monto_total_anual">Monto total anual:</string>
    <string name="constituir">Constituir</string>
    <string name="confirmar">Confirmar</string>
    <string name="plazo">Plazo:</string>
    <string name="banco_utn_santa_fe">Banco UTN Santa Fe</string>
    <string name="logo_utn">logo utn</string>
</resources>